this looks so bad on mobile devices, gg responsiveness -> fix later

--- a/newsite/home.css
+++ b/newsite/home.css
@@ -6,7 +6,7 @@
 @import url('https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@500;800&display=swap');
 
 body {
-    background-color: #1d2049;
+    background-color: #121e31;
     margin: 0;
     padding: 0;
     overflow: hidden;
@@ -48,3 +48,39 @@ body {
       transform: translate(0, 0);
     }
   }
+
+/* -------------------- BOX ------------------------ */
+
+.box {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: calc(55% - 28px);
+    height: 75vh;
+    background-color: #101424; /* Slightly darker background color */
+    border: 2px solid #19273c;
+    display: flex;
+}
+
+.static-image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.left-section {
+    width: 50%;
+    height: 100%;
+    background-image: url(./images/91882132_p0.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.right-section {
+    width: calc(5/6 * 100%);
+    height: 100%;
+    overflow-y: auto;
+    padding: 20px;
+}
